# gavaconnect

./: .env.sample  .justfile  Cargo.toml  DOCS.md  LICENSE  README.md
.github/workflows/: _ci.yml  ci.yml  crate_publish.yml  release.yml
examples/: checker_services.rs  customs_excise.rs  error_handling.rs  etims.rs  filing.rs  pin_generation.rs  pin_lookup.rs  prn_generation.rs  tcc.rs
src/: client.rs  error.rs  lib.rs
src/auth/: mod.rs
src/checker/: mod.rs
src/customs/: mod.rs
src/etims/: mod.rs
src/excise/: mod.rs
src/filing/: mod.rs
src/pin/: mod.rs
src/prn/: mod.rs
src/tcc/: mod.rs
tests/: integration.rs
